resource-service/kubernetes-resource-db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: resource-db-statefulset
  namespace: my
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-db
  template:
    metadata:
      labels:
        app: resource-db
    spec:
      containers:
        - name: resource-db-container
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: resource-db-data
              mountPath: /var/lib/postgresql/data
            - name: resource-db-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
          startupProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - pg_isready
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: resource-db-init-scripts
          configMap:
            name: resource-db-configmap
  volumeClaimTemplates:
    - metadata:
        name: resource-db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 200Mi

---

apiVersion: v1
kind: Service
metadata:
  name: resource-db-service
  namespace: my
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: resource-db
