resource-service/kubernetes-resource-service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-service-deployment
  namespace: my
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resource-service
  template:
    metadata:
      labels:
        app: resource-service
    spec:
      containers:
        - name: resource-service-container
          image: robertgaz/resource-service:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: resource-service-data
              mountPath: /data
      volumes:
        - name: resource-service-data
          persistentVolumeClaim:
            claimName: resource-service-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: resource-service
  namespace: my
spec:
  selector:
    app: resource-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31001
